test_failure_3.txt
============================= test session starts =============================
platform win32 -- Python 3.13.5, pytest-8.4.1, pluggy-1.6.0
rootdir: D:\deep think\deep-think-evolving
configfile: pytest.ini
plugins: anyio-4.9.0, langsmith-0.4.4
collected 18 items / 6 errors

=================================== ERRORS ====================================
_____________________ ERROR collecting test_failure_2.txt _____________________
C:\ProgramData\Anaconda3\Lib\pathlib\_local.py:546: in read_text
    return PathBase.read_text(self, encoding, errors, newline)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
C:\ProgramData\Anaconda3\Lib\pathlib\_abc.py:633: in read_text
    return f.read()
           ^^^^^^^^
<frozen codecs>:325: in decode
    ???
E   UnicodeDecodeError: 'utf-8' codec can't decode byte 0xff in position 0: invalid start byte
_______________ ERROR collecting tests/test_context_manager.py ________________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_context_manager.py:6: in <module>
    from src import context_manager as cm
src\context_manager.py:15: in <module>
    from src.embedding_client import embed_text
E     File "D:\deep think\deep-think-evolving\src\embedding_client.py", line 1
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
_____________ ERROR collecting tests/test_diversity_calculator.py _____________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_diversity_calculator.py:3: in <module>
    from src.diversity_calculator import calculate_similarity_matrix
E     File "D:\deep think\deep-think-evolving\src\diversity_calculator.py", line 25
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
_______________ ERROR collecting tests/test_embedding_client.py _______________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_embedding_client.py:5: in <module>
    from src import embedding_client as ec
E     File "D:\deep think\deep-think-evolving\src\embedding_client.py", line 1
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
________________ ERROR collecting tests/test_main_pipeline.py _________________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_main_pipeline.py:6: in <module>
    from main import run_pipeline
main.py:9: in <module>
    from src.context_manager import (
src\context_manager.py:15: in <module>
    from src.embedding_client import embed_text
E     File "D:\deep think\deep-think-evolving\src\embedding_client.py", line 1
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
______________ ERROR collecting tests/test_strategy_pipeline.py _______________
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\python.py:498: in importtestmodule
    mod = import_path(
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\ProgramData\Anaconda3\Lib\importlib\__init__.py:88: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
C:\Users\zhaoy\AppData\Roaming\Python\Python313\site-packages\_pytest\assertion\rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests\test_strategy_pipeline.py:9: in <module>
    from main import run_pipeline, _build_mock_adapters
main.py:9: in <module>
    from src.context_manager import (
src\context_manager.py:15: in <module>
    from src.embedding_client import embed_text
E     File "D:\deep think\deep-think-evolving\src\embedding_client.py", line 1
E       <<<<<<< HEAD
E       ^^
E   SyntaxError: invalid syntax
=========================== short test summary info ===========================
ERROR test_failure_2.txt - UnicodeDecodeError: 'utf-8' codec can't decode byt...
ERROR tests/test_context_manager.py
ERROR tests/test_diversity_calculator.py
ERROR tests/test_embedding_client.py
ERROR tests/test_main_pipeline.py
ERROR tests/test_strategy_pipeline.py
!!!!!!!!!!!!!!!!!!! Interrupted: 6 errors during collection !!!!!!!!!!!!!!!!!!!
============================== 6 errors in 8.40s ==============================
